added comment in responsive-css file

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,3 +33,5 @@
         margin: 0 auto;
     }
 }
+
+/* parent-of-div1 da 2s gavuwere max-width 1024px da 768px anu vifiqre 1024 ro chamocdeboda gaeketebina flex-direction column asec qna magram ufro dabla ro chamovdiodi anu ekrans ro vapataravebdi mere ukve sqrols agdebda magram ara mgoni sqrols tavidanve agdebs da rato shvreba mase rato ar momyveba divebi ra gavakete arasworad?   */
